--- a/react-app/package.json
+++ b/react-app/package.json
@@ -14,6 +14,7 @@
     "@headlessui/react": "^1.7.14",
     "@heroicons/react": "^2.0.18",
     "@rainbow-me/rainbowkit": "^0.12.0",
+    "@sismo-core/sismo-connect-react": "^0.0.20",
     "ethers": "^5.7.2",
     "next": "^13.4.2",
     "react": "18.2.0",
